--- a/et.lproj/Localizable.strings
+++ b/et.lproj/Localizable.strings
@@ -81,3 +81,7 @@
 "Field label" = "Välja nimi";
 "Field value" = "Välja väärtus";
 "Invoices" = "Arved";
+"Fixed format" = "Formaat";
+"Page format" = "Vali lehe formaat";
+"PDF" = "PDF";
+"US Letter" = "USA kiri";
