--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -81,3 +81,7 @@
 "Field label" = "Field label";
 "Field value" = "Field value";
 "Invoices" = "Invoices";
+"Fixed format" = "Page format";
+"Page format" = "Select page format";
+"PDF" = "PDF";
+"US Letter" = "USA Letter";
