--- a/es.lproj/Localizable.strings
+++ b/es.lproj/Localizable.strings
@@ -81,3 +81,7 @@
 "Field label" = "Etiqueta del campo";
 "Field value" = "Valor del campo";
 "Invoices" = "Facturas";
+"Fixed format" = "Formato de página";
+"Page format" = "Seleccionar formato de página";
+"PDF" = "PDF";
+"US Letter" = "Carta de EE. UU.";
